name:           brainfuck
version:        0.1.0.0
description:    Please see the README on Github at <https://github.com/potato4444/brainfuck#readme>
homepage:       https://github.com/potato4444/brainfuck#readme
bug-reports:    https://github.com/potato4444/brainfuck/issues
author:         potato4444
copyright:      2018 potato4444
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/potato4444/brainfuck


executable brainfuck
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      base >=4.7 && <5
    , transformers
  other-modules:
      Paths_brainfuck
  default-language: Haskell2010
